
if(PKG_CONFIG_FOUND)
  pkg_search_module(LIBFUSE "fuse3 >= 3.0.0")
endif()

if(NOT LIBFUSE_FOUND)
  find_package(FUSE3 CONFIG QUIET)
  if(FUSE3_FOUND)
    set(LIBFUSE_FOUND TRUE)
    if(TARGET FUSE3::FUSE3)
      get_target_property(LIBFUSE_INCLUDE_DIRS FUSE3::FUSE3
          INTERFACE_INCLUDE_DIRECTORIES)
      set(LIBFUSE_LIBRARIES FUSE3::FUSE3)
    endif()
  endif()
endif()

if(NOT LIBFUSE_FOUND)
  find_path(LIBFUSE_INCLUDE_DIR fuse.h PATH_SUFFIXES fuse3)
  find_library(LIBFUSE_LIBRARY NAMES fuse3)
  if(LIBFUSE_INCLUDE_DIR AND LIBFUSE_LIBRARY)
    set(LIBFUSE_FOUND TRUE)
    set(LIBFUSE_INCLUDE_DIRS ${LIBFUSE_INCLUDE_DIR})
    set(LIBFUSE_LIBRARIES ${LIBFUSE_LIBRARY} pthread)
  endif()
endif()

set(CONF_COMPONENTS
  "src/clib/libs/libbase_cll")
set(CONF_HEADER_DIRS)

if(LIBFUSE_FOUND)
  set(CONF_DO_BUILD TRUE)
  set(CONF_INCLUDE_DIRS
    ${LIBFUSE_INCLUDE_DIRS})
  set(CONF_COMP_DEFS
    "-D_FILE_OFFSET_BITS=64")
  set(CONF_LINK_LIBS
    ${LIBFUSE_LIBRARIES})
endif()

